web/themes/custom/nysltheme2/css/style.css
/**
 * @file
 * Subtheme specific CSS.
 */


.navbar {
    background-color: #004080;
}

.navbar-main {
    background-color: #004080;
}

#navbar-main {
    background-color: #004080;
}

ul.sf-menu a {
    color: #fff;
    padding: 1em 1.5em 1em 0;
    text-decoration: none;
}

ul.sf-menu a:hover {
    background-color: #364F89;
    color: #fff;
}

ul.sf-menu.menu li {
    margin: 0;
    padding: 0 5px;
    background-color: #004080;
}

ul.sf-menu.menu li:hover {
    background-color: #364F89;
}

a.sf-depth-2 {
    border-style: solid;
    border-width: 2px;
    border-left: none;
    border-right: none;
    border-bottom: none;
    border-color: #fff;
}

